--- a/index.html
+++ b/index.html
@@ -1,10 +1,47 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
+
 <head>
-    <title>Privacy Policy</title>
+  <link rel="stylesheet" href="style.css" />
+  <title>Privacy Policy</title>
 </head>
+
 <body>
-    <h1>Privacy Policy</h1>
-    <!-- Your privacy policy content goes here -->
+  <h1> Privacy Policy for ChatGPT Bot </h1>  
+  <h2> 1. Information We Collect </h2> 
+  <p>        
+User Data: The bot may collect user data, including message content, user IDs, and server information, solely for the purpose of providing its services and features.
+  </p>
+  <h2>2. How We Use Your Information </h2>
+  <p> 
+Service Delivery: User data is used to deliver the bot's functionalities and provide a seamless user experience.
+  </p> 
+<h2>3. Data Security </h2>
+  <p> 
+Protection: We take reasonable measures to protect user data from unauthorized access, alteration, or disclosure.
+    </p> 
+<h2> 4. Data Retention</h2>
+  <p> 
+Storage: User data is stored only for as long as necessary to fulfill the purposes outlined in this policy.
+    </p> 
+<h2>5. Third-Party Services</h2>
+  <p> 
+No Sharing: We do not share user data with third-party services or individuals.
+  </p> 
+<h2>6. User Rights</h2>
+  <p> 
+Access and Deletion: Users have the right to access and request the deletion of their data.
+  </p> 
+<h2>7. Changes to This Privacy Policy</h2>
+  <p> 
+Updates: We may update this privacy policy periodically. The effective date will reflect the most recent changes.
+  </p> 
+<h2>8. Contact Us</h2>
+  <p> 
+Questions or Concerns: If you have any questions or concerns about this privacy policy, please <a href="https://discord.gg/46tVMUqMBD">contact us</a>.
+
+
+  </p>
 </body>
+
 </html>
