--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 
 <head>
   <link rel="stylesheet" href="style.css" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Privacy Policy</title>
 </head>
 
@@ -39,7 +40,6 @@ Updates: <br>We may update this privacy policy periodically. The effective date 
 <h2>8. Contact Us</h2>
   <p> 
 Questions or Concerns: <br>If you have any questions or concerns about this privacy policy, please <a href="https://discord.gg/46tVMUqMBD">contact us</a>.
-
   </p>
 </body>
 
