--- a/privacy.html
+++ b/privacy.html
@@ -11,7 +11,7 @@
   <h1> Privacy Policy for ChatGPT Bot </h1>  
   <h2> 1. Information We Collect </h2> 
   <p>        
-User Data: The bot may collect user data, including message content, user IDs, and server information, solely for the purpose of providing its services and features.
+User Data: <br>The bot may collect user data, including message content, user IDs, and server information, solely for the purpose of providing its services and features.
   </p>
   <h2>2. How We Use Your Information </h2>
   <p> 
