--- a/tos.html
+++ b/tos.html
@@ -2,58 +2,110 @@
 <html lang="en">
 
 <head>
-  <link rel="stylesheet" href="style.css" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Terms of Service</title>
+    <meta charset="utf-8">
+    <title>Terms Of Service</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
+    <link rel="stylesheet" media="screen" href="style.css">
+    <link rel="icon" type="image/png" href="https://cdn.discordapp.com/attachments/1144946035785994330/1189521844190072962/2f60dc15bcf5c37095c500f21e43cd10_1.png">
 </head>
 
 <body>
-  <h1> ToS for ChatGPT Bot </h1>  
-  <h2> 1. Acceptance of Terms </h2> 
-  <p>        
-By using the Bot, you acknowledge that you have read, understood, and agreed to these Terms of Service.
-If you do not agree with any part of these terms, you may not use the bot.
-  </p>
-  <h2>2. Use of the Bot </h2>
-  <p> 
-&#183 The Bot is provided for entertainment and utility purposes only. <br>
-&#183 The Bot is intended for users who comply with Discord's Terms of Service and Community Guidelines. <br>
-&#183 You must be at least 13 years old to use the Bot. <br>
-  </p> 
-<h2>3. User Conduct </h2>
-  <p> 
-&#183 Users are expected to use the Bot responsibly and respectfully. <br>
-&#183 You must not use the Bot to engage in any illegal, harmful, or abusive activities.<br>
-&#183 Hate speech, harassment, or any form of abusive behavior is strictly prohibited.
 
-    </p> 
-<h2> 4. Data and Privacy </h2>
-  <p> 
-The Bot may collect and store data for the purpose of providing its services.<br> Please refer to our Privacy Policy for more information.
+    <a href="https://chatgptbot.github.io">
+        <img src="https://cdn.discordapp.com/attachments/1144946035785994330/1189522027762171934/2f60dc15bcf5c37095c500f21e43cd10.png?ex=659e77b7&is=658c02b7&hm=d6c58bcb573d049c48e85a7868c48afa89ee334b978ca4551537723bf141f9fb&" class="logo">
+    </a>
 
-    </p> 
-<h2>5. Availability and Maintenance
-</h2>
-  <p> 
-&#183 The Bot may experience downtime or interruptions for maintenance and updates. <br>
-&#183 The Developer will make reasonable efforts to ensure the bot's availability but does not guarantee uninterrupted service.
+    <h1 class="title">Terms Of Service</h1>
 
-  </p> 
-<h2>6. Changes and Termination</h2>
-  <p> 
-&#183 The Developer reserves the right to modify or discontinue the Bot, with or without notice. <br>
-&#183 The Developer may terminate your access to the Bot for any reason without prior notice.
+    <div class="statement">
+        <h1 class="subtitle">
+            1. Acceptance of Terms
+        </h1>
 
-  </p> 
-<h2>7. Changes to Terms </h2>
-  <p> 
-The Developer may update these Terms of Service at any time without notice.<br>It is your responsibility to review these terms periodically.
+        <p>
+            By using the Bot, you acknowledge that you have read, understood, and agreed to these Terms of Service.
+            If you do not agree with any part of these terms, you may not use the bot.
+        </p>
+    </div>
 
-  </p> 
-<h2>8. Contact Us</h2>
-  <p> 
-For inquiries, support, or to report violations of these Terms of Service, please <a href="https://discord.gg/46tVMUqMBD">contact us</a>.
-  </p>
+    <div class="statement">
+        <h1 class="subtitle">
+            2. Use of the Bot
+        </h1>
+
+        <p>
+            &#183 The Bot is provided for entertainment and utility purposes only. <br>
+            &#183 The Bot is intended for users who comply with Discord's Terms of Service and Community Guidelines. <br>
+            &#183 You must be at least 13 years old to use the Bot
+        </p>
+    </div>
+
+    <div class="statement">
+        <h1 class="subtitle">
+            3. User Conduct
+        </h1>
+
+        <p>
+            &#183 Users are expected to use the Bot responsibly and respectfully. <br>
+            &#183 You must not use the Bot to engage in any illegal, harmful, or abusive activities.<br>
+            &#183 Hate speech, harassment, or any form of abusive behavior is strictly prohibited.
+        </p>
+    </div>
+
+    <div class="statement">
+        <h1 class="subtitle">
+            4. Data and Privacy
+        </h1>
+
+        <p>
+            The bot doesn't store data; instead, it instantly processes it for the user.<br> Please refer to our Privacy Policy for more information.
+        </p>
+    </div>
+
+    <div class="statement">
+        <h1 class="subtitle">
+            5. Availability and Maintenance
+        </h1>
+
+        <p>
+            &#183 The Bot may experience downtime or interruptions for maintenance and updates. <br>
+            &#183 The Developer will make reasonable efforts to ensure the bot's availability but does not guarantee uninterrupted service.
+        </p>
+    </div>
+
+    <div class="statement">
+        <h1 class="subtitle">
+            6. Changes and Termination
+        </h1>
+
+        <p>
+            &#183 The Developer reserves the right to modify or discontinue the Bot, with or without notice. <br>
+            &#183 The Developer may terminate your access to the Bot for any reason without prior notice.
+        </p>
+    </div>
+
+    <div class="statement">
+        <h1 class="subtitle">
+            7. Changes to Terms
+        </h1>
+
+        <p>
+            The Developer may update these Terms of Service at any time without notice.<br>It is your responsibility to review these terms periodically.
+        </p>
+    </div>
+
+    <div class="statement">
+        <h1 class="subtitle">
+            8. Contact Us
+        </h1>
+
+        <p>
+            For inquiries, support, or to report violations of these Terms of Service, please <a href="https://discord.gg/rbKh22Gtnm">contact us</a>.
+        </p>
+    </div>
+
 </body>
 
 </html>
+
+
