--- a/privacy.html
+++ b/privacy.html
@@ -2,45 +2,71 @@
 <html lang="en">
 
 <head>
-  <link rel="stylesheet" href="style.css" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Privacy Policy</title>
+    <meta charset="utf-8">
+    <title>Privacy Policy</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" media="screen" href="style.css">
+    <link rel="icon" type="image/png" href="https://cdn.discordapp.com/attachments/1144946035785994330/1189521844190072962/2f60dc15bcf5c37095c500f21e43cd10_1.png">
 </head>
 
 <body>
-  <h1> Privacy Policy for ChatGPT Bot </h1>  
-  <h2> 1. Information We Collect </h2> 
-  <p>        
-User Data: <br>The bot may collect user data, including message content, user IDs, and server information, solely for the purpose of providing its services and features.
-  </p>
-  <h2>2. How We Use Your Information </h2>
-  <p> 
-Service Delivery: <br> User data is used to deliver the bot's functionalities and provide a seamless user experience.
-  </p> 
-<h2>3. Data Security </h2>
-  <p> 
-Protection: <br>We take reasonable measures to protect user data from unauthorized access, alteration, or disclosure.
-    </p> 
-<h2> 4. Data Retention</h2>
-  <p> 
-Storage: <br>User data is stored only for as long as necessary to fulfill the purposes outlined in this policy.
-    </p> 
-<h2>5. Third-Party Services</h2>
-  <p> 
-No Sharing: <br>We do not share user data with third-party services or individuals.
-  </p> 
-<h2>6. User Rights</h2>
-  <p> 
-Access and Deletion: <br>Users have the right to access and request the deletion of their data.
-  </p> 
-<h2>7. Changes to This Privacy Policy</h2>
-  <p> 
-Updates: <br>We may update this privacy policy periodically. The effective date will reflect the most recent changes.
-  </p> 
-<h2>8. Contact Us</h2>
-  <p> 
-Questions or Concerns: <br>If you have any questions or concerns about this privacy policy, please <a href="https://discord.gg/46tVMUqMBD">contact us</a>.
-  </p>
+
+    <a href="https://chatgptbot.github.io">
+        <img src="https://cdn.discordapp.com/attachments/1144946035785994330/1189522027762171934/2f60dc15bcf5c37095c500f21e43cd10.png" class="logo">
+    </a>
+
+    <h1 class="title">Privacy Policy</h1>
+
+    <div class="statement">
+        <h1 class="subtitle">
+            1. Information We Collect
+        </h1>
+
+        <p>
+            The bot promptly retrieves user avatars, banners, emojis, and guild icons, delivering them seamlessly to the user without ever retaining any data.
+        </p>
+    </div>
+
+    <div class="statement">
+        <h1 class="subtitle">
+            2. How We Use Your Information
+        </h1>
+
+        <p>
+            User data is used to deliver the bot's functionalities and provide a seamless user experience.
+        </p>
+    </div>
+
+    <div class="statement">
+        <h1 class="subtitle">
+            3. Third-Party Services
+        </h1>
+
+        <p>
+            We do not share user data with third-party services or individuals.
+        </p>
+    </div>
+
+    <div class="statement">
+        <h1 class="subtitle">
+            4. Changes to This Privacy Policy
+        </h1>
+
+        <p>
+            We may update this privacy policy periodically. The effective date will reflect the most recent changes.
+        </p>
+    </div>
+
+    <div class="statement">
+        <h1 class="subtitle">
+            5. Contact Us
+        </h1>
+
+        <p>
+            If you have any questions or concerns about this privacy policy, please <a href="https://discord.gg/rbKh22Gtnm">contact us</a>
+        </p>
+    </div>
+
 </body>
 
 </html>
